# hubero

./: .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  appveyor.yml  codecov.yml
boolSATlib/: core.hpp  tools.hpp
clitools/: main.cpp
misc/appveyor/: CMakeLists.txt  configure.bat  coverage-helper.cpp  library.ps1
src/hubero/: core.hpp  tools.hpp
tests/: core_dimacs_lit_test.cpp  core_lit_test.cpp  core_mini_lit_test.cpp  core_var_test.cpp  tools_test.cpp
